--- a/Day-24-Docker-Zero-to-Hero/examples/python-web-app/devops/demo/templates/demo_site.html
+++ b/Day-24-Docker-Zero-to-Hero/examples/python-web-app/devops/demo/templates/demo_site.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>Django Project Demo</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -73,7 +73,7 @@ footer {
 
 
 <header>
-  <h2>Free DevOps Course By Abhishek</h2>
+  <h2>Django Project</h2>
 </header>
 
 <section>
@@ -87,15 +87,15 @@ footer {
   
   <article>
     <h1>Agenda</h1>
-    <p>Learn DevOps with strong foundational knowledge and practical understanding</p>
-    <p>Please Share the Channel with your friends and colleagues</p>
+    <p>This is a simple Django Project.</p>
+    <p>This Django project demonstrates a straightforward web application.</p>
+    <p>By containerizing it with Docker, we ensure easy deployment and scalability.</p>
   </article>
 </section>
 
 <footer>
-  <p>@AbhishekVeeramalla</p>
+  <p>@PrajwalChapke</p>
 </footer>
 
 </body>
 </html>
-
